--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,6 @@ pydantic-settings==2.1.0
 passlib[bcrypt]==1.7.4
 email-validator==2.1.0
 requests==2.31.0
-pgvector==0.2.4 
+pgvector==0.2.4
+python-jose[cryptography]==3.3.0
+httpx==0.25.2 
