--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,5 @@ email-validator==2.1.0
 requests==2.31.0
 pgvector==0.2.4
 python-jose[cryptography]==3.3.0
-httpx==0.25.2 
+httpx==0.25.2
+boto3==1.34.0 
